finished 4-person-list-project

--- a/4-person-list-project/package.json
+++ b/4-person-list-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mini-book-project",
+  "name": "4-person-list-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
