--- a/8-todo-list-project/package.json
+++ b/8-todo-list-project/package.json
@@ -30,5 +30,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "bootstrap": "^4.5.0",
+    "uuid": "^8.2.0"
   }
 }
