--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "python.pythonPath": "C:\\Users\\dev\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
